<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margen_pantalla">

        <TextView
            style="@style/EstiloTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_formulario" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_grande"
            android:hint="@string/hint_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campo_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/EstiloEtiqueta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_pantalla"
            android:text="@string/etiqueta_tipo" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_pelicula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:minHeight="@dimen/altura_minima_toque"
                android:text="@string/tipo_pelicula"
                android:textColor="@color/color_texto_principal" />

            <RadioButton
                android:id="@+id/radio_serie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margen_grande"
                android:minHeight="@dimen/altura_minima_toque"
                android:text="@string/tipo_serie"
                android:textColor="@color/color_texto_principal" />
        </RadioGroup>

        <TextView
            style="@style/EstiloEtiqueta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_pequeno"
            android:text="@string/etiqueta_plataforma" />

        <Spinner
            android:id="@+id/spinner_plataforma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/plataformas"
            android:minHeight="@dimen/altura_minima_toque" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_pantalla"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/tamano_icono_estrella"
                android:layout_height="@dimen/tamano_icono_estrella"
                android:contentDescription="@string/desc_estrella"
                android:src="@drawable/ic_estrella" />

            <TextView
                style="@style/EstiloEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margen_pequeno"
                android:text="@string/etiqueta_nota" />
        </LinearLayout>

        <RatingBar
            android:id="@+id/rating_nota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:progressBackgroundTint="@color/color_texto_secundario"
            android:progressTint="@color/color_acento"
            android:rating="3"
            android:stepSize="1" />

        <Button
            android:id="@+id/boton_guardar"
            style="@style/EstiloBoton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_grande"
            android:text="@string/boton_guardar" />

        <Button
            android:id="@+id/boton_cancelar"
            style="@style/EstiloBotonSecundario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_pequeno"
            android:text="@string/boton_cancelar" />
    </LinearLayout>
</ScrollView>
